--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
     "description": "Parser common helper package",
     "license": "GPL-2.0",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.4.0"
     }
 }
