--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
     "license": "GPL-2.0",
     "require": {
         "php": ">=5.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "AbuseIO\\Parser\\Factory\\": "src/"
+        }
     }
 }
