Standardized composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,26 @@
 {
     "name": "abuseio/parser-common",
     "description": "Parser common helper package",
+    "version": "1.0.0-dev",
+    "keywords": ["laravel", "abuseio", "parser"],
+    "homepage": "http://abuse.io",
+    "type": "library",
     "license": "GPL-2.0",
+    "authors": [
+        {
+            "name": "AbuseIO Foundation",
+            "email": "dev@abuse.io",
+            "homepage": "http://abuse.io",
+            "role": "Lead"
+        }
+    ],
+    "support": {
+        "email": "dev@abuse.io",
+        "issues": "https://github.com/AbuseIO/parser-common/issues",
+        "irc": "irc://irc.freenode.net/abuseio",
+        "source": "https://github.com/AbuseIO/parser-common",
+        "docs": "https://abuse.io/resources/documentation/"
+    },
     "require": {
         "php": ">=5.4.0"
     },
