--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "abuseio/parser-common",
     "description": "Parser common helper package",
-    "version": "1.0.2-dev",
+    "version": "1.1.0",
     "keywords": ["laravel", "abuseio", "parser"],
     "homepage": "http://abuse.io",
     "type": "library",
